packet queues working

--- a/src/crazyradio_cpp/deps/libcrazyradio/CMakeLists.txt
+++ b/src/crazyradio_cpp/deps/libcrazyradio/CMakeLists.txt
@@ -5,7 +5,9 @@ find_library(USB_LIB usb-1.0)
 include_directories(include)
 add_library(libcrazyradio 
         Crazyradio.cpp
-        USBDevice.cpp)
+        USBDevice.cpp
+        CrtpPacketQueue.cpp
+        CrtpLink.cpp)
 
 target_link_libraries(libcrazyradio
     PRIVATE
