--- a/src/crtp_driver/package.xml
+++ b/src/crtp_driver/package.xml
@@ -13,7 +13,8 @@
   <test_depend>python3-pytest</test_depend>
 
   <depend>crtp_interface</depend>
-
+  <depend>object_tracker_interfaces</depend>
+  
   <export>
     <build_type>ament_python</build_type>
   </export>
