--- a/src/crazyflie_hardware_gateway/launch/crazyflieTypes.yaml
+++ b/src/crazyflie_hardware_gateway/launch/crazyflieTypes.yaml
@@ -1,6 +1,15 @@
 /**:
   ros__parameters:  
     crazyflieTypes:
+      tracked: 
+        sendExternalPosition: true
+        sendExternalPose: false
+        maxInitialDeviation: 0.4
+        markerConfigurationIndex: 4
+        dynamicsConfigurationIndex: 0
       default: 
-        markerConfiguration: 4
-        dynamicsConfiguration: 0
+        sendExternalPosition: false
+        sendExternalPose: false
+        maxInitialDeviation: 0.4
+        markerConfigurationIndex: 4
+        dynamicsConfigurationIndex: 0
