--- a/src/crazyradio/deps/libcrtp/CMakeLists.txt
+++ b/src/crazyradio/deps/libcrtp/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
+set(CMAKE_CXX_STANDARD 20)
 project(libcrtp)
 
 include_directories(include)
