Improved Gateway Execution, Error Handling and Link management.
CrtpLinks can now be closed on on crazyradio #closes 7
The add crazyflie service now responds with the error message associated #closes 10
Crazyflie now gets transitioned from unconfigured with from the gateway.
If adding to tracked or broadcaster raises an error this will be in the service.
This is a major commit. Test rigorously before merging with main.

--- a/src/crtp_interfaces/CMakeLists.txt
+++ b/src/crtp_interfaces/CMakeLists.txt
@@ -16,9 +16,9 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/CrtpLink.msg"
   "msg/CrtpPacket.msg"
   "msg/CrtpResponse.msg"
-  "msg/CrtpLinkEnd.msg"
   "srv/CrtpPacketSend.srv"
   DEPENDENCIES std_msgs 
 )
