--- a/src/crazyflie_hardware_gateway_interfaces/CMakeLists.txt
+++ b/src/crazyflie_hardware_gateway_interfaces/CMakeLists.txt
@@ -12,9 +12,10 @@ find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "srv/Crazyflie.srv"
+  "srv/AddCrazyflie.srv"
+  "srv/RemoveCrazyflie.srv"
   DEPENDENCIES std_msgs geometry_msgs
- )
+)
 
 
 if(BUILD_TESTING)
