--- a/src/crtp_cpp_test/package.xml
+++ b/src/crtp_cpp_test/package.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>crtp_cpp</name>
+  <name>crtp_cpp_test</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="vinzenz@malke.info">winni</maintainer>
   <license>TODO: License declaration</license>
 
-  <build_depend>ament_index_cpp</build_depend>
+  <depend>crtp_cpp</depend>
 
-
-  <buildtool_depend>ament_cmake_ros</buildtool_depend>
-  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <build_export_depend>ament_index_cpp</build_export_depend>
-
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
