--- a/src/crazyflie_hardware_cpp/CMakeLists.txt
+++ b/src/crazyflie_hardware_cpp/CMakeLists.txt
@@ -31,6 +31,7 @@ set(CRTP_DRIVER_SRCS
   src/crtp_driver_cpp/hl_commander.cpp
   src/crtp_driver_cpp/generic_commander.cpp
   src/crtp_driver_cpp/parameters.cpp
+  src/crtp_driver_cpp/console.cpp  
   src/crtp_link_ros.cpp
 )
 
