--- a/src/crazyflie_hardware_cpp/package.xml
+++ b/src/crazyflie_hardware_cpp/package.xml
@@ -11,6 +11,7 @@
   <depend>broadcaster_interfaces</depend>
   <depend>object_tracker_interfaces</depend>
   <depend>crtp_cpp</depend>
+  <depend>crtp_interfaces</depend>
   <depend>rclcpp</depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
