Cleaned and sped up crazyradio node, tested with 15 crazyflies

--- a/src/crazyradio/deps/libcrtp/CMakeLists.txt
+++ b/src/crazyradio/deps/libcrtp/CMakeLists.txt
@@ -6,5 +6,6 @@ include_directories(include)
 add_library(libcrtp 
         CrtpPacketQueue.cpp
         CrtpLink.cpp
-        CrtpLinkContainer.cpp)
+        CrtpLinkContainer.cpp
+        CrtpLogger.cpp)
 
